# tracker

./: .env  .gitignore  README.md  main.py  pyproject.toml  tracker.db
api/: android.py  router.py
api/client/: auth.py  location.py
core/: config.py  database.py  exceptions.py  initializer.py  logger.py
dao/: client.py
dependencies/: dao_dep.py
models/: android_device.py  client.py
schemas/: auth.py  location.py
services/: location.py
trackerapp/: pubspec.yaml
trackerapp/android/app/: build.gradle.kts
trackerapp/android/app/src/main/: AndroidManifest.xml
trackerapp/android/app/src/main/kotlin/com/amanpoonia/tracker/tracker/: MainActivity.kt
trackerapp/android/app/src/main/res/drawable/: launch_background.xml
trackerapp/lib/: main.dart
trackerapp/lib/backend/: location.dart  token.dart  uuid.dart
trackerapp/lib/frontend/: system_info.dart
trackerapp/test/: widget_test.dart
utils/: datetime_helpers.py  jwt_helpers.py
