[project]
name = "tracker"
version = "0.1.0"
description = "Server Component of tracker system to track user using Android App."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "ruff>=0.13.0",
]
